--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <html>
-    <head>
-        <title>JavaScript Practice</title>
-    </head>
-    <body>
-        JavaScript Practice....
-    </body>
+  <head>
+    <title>JavaScript Practice</title>
+  </head>
+  <body>
+    <p id="demo">JavaScript can change HTML content.</p>
+    <!-- //JavaScript Can Change HTML Content -->
+    <button type="button" onclick='document.getElementById("demo").innerHTML = "Hello JavaScript!"'>Click Me!</button>
+    <script>
+      //Varialbles in JavaScript
+      //var ok = "test"; //1. Var
+      //
+      //document.write(ok); //Writes in Document..
+    </script>
+  </body>
 </html>
