--- a/conditional.html
+++ b/conditional.html
@@ -7,37 +7,52 @@
   </head>
   <body>
     <script>
-            //The if Statement
-            //   if (condition) {
-            //     //  block of code to be executed if the condition is true
-            //   }
+      //The if Statement
+      //   if (condition) {
+      //     //  block of code to be executed if the condition is true
+      //   }
 
-            //     The else if Statement
-            // Use the else if statement to specify a new condition if the first condition is false.
+      //     The else if Statement
+      // Use the else if statement to specify a new condition if the first condition is false.
 
-            //The JavaScript Switch Statement
-            //Use the switch statement to select one of many code blocks to be executed.
-            //Syntax
+      //The JavaScript Switch Statement
+      //Use the switch statement to select one of many code blocks to be executed.
+      //Syntax
 
-          //   switch (expression) {
-          //     case x:
-          //       // code block
-          //       break;
-          //     case y:
-          //       // code block
-          //       break;
-          //     default:
-          //     // code block
-          //   }
+      //   switch (expression) {
+      //     case x:
+      //       // code block
+      //       break;
+      //     case y:
+      //       // code block
+      //       break;
+      //     default:
+      //     // code block
+      //   }
 
       //     This is how it works:
 
       // The switch expression is evaluated once.
       // The value of the expression is compared with the values of each case.
       // If there is a match, the associated block of code is executed.
-          switch (var x<5){
-              
-          }
+      var x;
+      switch ((x = 5)) {
+        case 1:
+          document.write("No this case");
+          break;
+        case 2:
+          document.write("No this case");
+          break;
+        case 3:
+          document.write("No this case");
+          break;
+        case 4:
+          document.write("No this case");
+          break;
+        case 5:
+          document.write("yes , this case");
+          break;
+      }
     </script>
   </body>
 </html>
