--- a/loops.html
+++ b/loops.html
@@ -7,36 +7,92 @@
   </head>
   <body>
     <script>
-              var a = 1;
-              var b;
-              //wHile
-              while (a <= 10) {
-                document.write("Value of a is:" + a + "<br>");
-                a = a + 5;
-              }
-              //For Loop - With Odd Even Example
-            //   for (b = 1; b <= 100; b++) {
-            //     if (b % 2 == 0) {
-            //         document.write("Even number:"+ b + "<br>");
-            //     }
-            //     else{
-            //         document.write("Odd Number:"+ b + "<br>");
-            //     }
-            //   }
-              //Nested Loop - With Examples
-              //Matrix Example
-              var a;
-              var b;
-              document.write("<table style='border: 1px solid black';>");
-              for (a = 1; a <= 100;a=a+10){
-                  document.write("<tr>");
-                for (b = a; b < a+10; b++){
-                  //   document.write(b +" ");
-                    document.write("<td style='border: 1px solid black';>"+b +"</td>");
-                }
-                document.write("</tr>");
-              }
-              document.write("</table>");
+      //   var a = 1;
+      //   var b;
+      //   //wHile
+      //   while (a <= 10) {
+      //     document.write("Value of a is:" + a + "<br>");
+      //     a = a + 5;
+      //   }
+      //For Loop - With Odd Even Example
+      //   for (b = 1; b <= 100; b++) {
+      //     if (b % 2 == 0) {
+      //         document.write("Even number:"+ b + "<br>");
+      //     }
+      //     else{
+      //         document.write("Odd Number:"+ b + "<br>");
+      //     }
+      //   }
+      //Nested Loop - With Examples
+      //Matrix Example
+      var a;
+      var b;
+      document.write("<table style='border: 1px solid black';>Matrix Example");
+      for (a = 1; a <= 100; a = a + 10) {
+        document.write("<tr>");
+        for (b = a; b < a + 10; b++) {
+          //   document.write(b +" ");
+          document.write("<td style='border: 1px solid black';>" + b + "</td>");
+        }
+        document.write("</tr>");
+      }
+      document.write("</table>");
+
+      //1
+      //1 2
+      //1 2 3
+      //1 2 3 4
+      //1 2 3 4 5
+      document.write("<br>Pattern Example: 1<br>");
+
+      for (var a = 1; a <= 5; a++) {
+        for (var b = 1; b <= a; b++) {
+          document.write(b + " ");
+        }
+        document.write("<br>");
+      }
+
+      //1
+      //2 2
+      //3 3 3
+      //4 4 4 4
+      //5 5 5 5 5
+
+      document.write("<br>Pattern Example: 2<br>");
+      for (var a = 1; a <= 5; a++) {
+        for (var b = 1; b <= a; b++) {
+          document.write(a + " ");
+        }
+        document.write("<br>");
+      }
+
+      //5 5 5 5 5
+      //4 4 4 4
+      //3 3 3
+      //2 2
+      //1
+
+      document.write("<br>Pattern Example: 3<br>");
+      for (var a = 5; a >= 1; a--) {
+        for (var b = 1; b <= a; b++) {
+          document.write(a + " ");
+        }
+        document.write("<br>");
+      }
+
+      //5 4 3 2 1
+      //4 3 2 1
+      //3 2 1
+      //2 1
+      //1
+
+      document.write("<br>Pattern Example: 4<br>");
+      for (var a = 5; a >= 1; a--) {
+        for (var b = a; b>= 1; b--) {
+            document.write(b + " ");
+        }
+        document.write("<br>");
+      }
     </script>
   </body>
 </html>
