--- a/Basics/Phase - 2/Project 1/index.html
+++ b/Basics/Phase - 2/Project 1/index.html
@@ -35,10 +35,10 @@
         <h1>Add your notes</h1>
         <div class="card" style="width: 100%;">
             <div class="card-body">
-                <!-- <div class="form-group">
+                <div class="form-group">
                     <label>Note Title</label>
                     <input type="text" class="form-control" id="addTitle" aria-describedby="textBody">
-                </div> -->
+                </div>
                 <div class="form-group">
                     <label></label>Details</label>
                     <textarea class="form-control" id="addDetails" rows="3"></textarea>
