Updated Ajax Code

--- a/Basics/Phase - 2/Ajax/ajaxHtml.html
+++ b/Basics/Phase - 2/Ajax/ajaxHtml.html
@@ -23,6 +23,24 @@
 
         </ul>
     </div>
+    <table class="table">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">ID</th>
+                <th scope="col">Name</th>
+                <th scope="col">Saalry</th>
+                <th scope="col">Age</th>
+            </tr>
+        </thead>
+        <tbody id="tBody">
+            <!-- <tr>
+                <th scope="row">1</th>
+                <td>Mark</td>
+                <td>Otto</td>
+                <td>@mdo</td>
+            </tr> -->
+        </tbody>
+    </table>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script>
